--- a/public/SePro.html
+++ b/public/SePro.html
@@ -36,7 +36,7 @@
     <button onclick="setCounter()">Set counter</button>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="hantel_iot.js"></script>
+    <script src="SePro.js"></script>
 </body>
 
 </html>
