--- a/public/SePro.html
+++ b/public/SePro.html
@@ -12,7 +12,7 @@
     <!-- Events example -->
     <p>Last Event: <span id="lastevent"></span></p>
     <!-- <p>Counter (Event): <span id="counterevent"></span></p> -->
-    <p>Training Status: <span id="Tempevent"></span></p>
+    <p>Temp: <span id="Tempevent"></span></p>
     <p>Hantelbewegungen: <span id="Humevent"></span></p>
     <p>Durchschnittliche Kadenz: <span id="StatTemp"></span></p>
     <p>Durchschnittliche Kadenz: <span id="StatHum"></span></p>
