--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <p>This is a demo app.</p>
-    <p><a href="/SePro.html">Cloud demo (event, variables, functions)</a></p>
+    <p><a href="/SePro.html">SEPR-TEHU (event, variables, functions)</a></p>
     <p><a href="/events.html">Events</a></p>
 </body>
 
