--- a/public/SePro.html
+++ b/public/SePro.html
@@ -13,9 +13,9 @@
     <p>Last Event: <span id="lastevent"></span></p>
     <!-- <p>Counter (Event): <span id="counterevent"></span></p> -->
     <p>Temp: <span id="Tempevent"></span></p>
-    <p>Hantelbewegungen: <span id="Humevent"></span></p>
-    <p>Durchschnittliche Kadenz: <span id="StatTemp"></span></p>
-    <p>Durchschnittliche Kadenz: <span id="StatHum"></span></p>
+    <p>Humidity: <span id="Humevent"></span></p>
+    <p>Stat Temp: <span id="StatTemp"></span></p>
+    <p>Stat Humidity: <span id="StatHum"></span></p>
 
     <hr>
     <h4>Variables</h4>
