--- a/public/SePro.html
+++ b/public/SePro.html
@@ -20,20 +20,13 @@
     <hr>
     <h4>Variables</h4>
     <!-- Read variables example -->
-    <p>Temperatur: <span id="TrainingStatus"></span></p>
+    <p>Temperatur: <span id="Temperatur"></span></p>
     <button onclick="gettemperature()">Get Temperatur</button>
     <br>
 
-    <p>Humidity: <span id="TrainingStatus"></span></p>
+    <p>Humidity: <span id="Humidity"></span></p>
     <button onclick="gethumidity()">Get Humidity</button>
     <br>
-
-    <hr>
-    <h4>Functions</h4>
-    <!-- Call functions example  -->
-    <p>Set Counter</p>
-    <input type="number" id="counterinput" value="0">
-    <button onclick="setCounter()">Set counter</button>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="SePro.js"></script>
