--- a/public/SePro.html
+++ b/public/SePro.html
@@ -20,11 +20,11 @@
     <hr>
     <h4>Variables</h4>
     <!-- Read variables example -->
-    <p>Temperatur: <span id="Temperatur"></span></p>
+    <p>Temperatur: <span id="temperature"></span></p>
     <button onclick="gettemperature()">Get Temperatur</button>
     <br>
 
-    <p>Humidity: <span id="Humidity"></span></p>
+    <p>Humidity: <span id="humidity"></span></p>
     <button onclick="gethumidity()">Get Humidity</button>
     <br>
 
