--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <p>This is a demo app.</p>
     <p><a href="/SePro.html">SEPR-TEHU (event, variables, functions)</a></p>
     <p><a href="/events.html">Events</a></p>
+    <p><a href="/visualization.html">Visualization</a></p>
 </body>
 
 </html>
