--- a/public/visualization.html
+++ b/public/visualization.html
@@ -15,17 +15,17 @@
 
 <body>
     <div class="container">
-        <h1 class="mt-3">Light Sensor (BH1750)</h1>
+        <h1 class="mt-3">Temperatur & Humidity Sensor (BME680)</h1>
 
-        <h2 class="mt-5">Lux Level (Aktueller Wert)</h2>
+        <h2 class="mt-5">Temperatur Level (Aktueller Wert)</h2>
 
         <!-- Aktueller Lux Level als Progressbar -->
         <div class="progress">
-            <div id="luxlevel-bar" class="progress-bar bg-success" role="progressbar" style="width: 0%"></div>
+            <div id="templevel-bar" class="progress-bar bg-success" role="progressbar" style="width: 0%"></div>
         </div>
 
         <!-- Aktueller Lux Level als Text -->
-        <p id="luxlevel-text">Warte auf erste Messung...</p>
+        <p id="templevel-text">Warte auf erste Messung...</p>
 
         <h2 class="mt-5">Lux Level (Durchschnitt)</h2>
 
