--- a/Sensorprojekt/Temperatur.html
+++ b/Sensorprojekt/Temperatur.html
@@ -76,7 +76,7 @@
                         </div><!-- Bootstrap JavaScript -->
                         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script><!-- Google Charts JavaScript -->
                         <script src="https://www.gstatic.com/charts/loader.js"></script><!-- Eigenes JavaScript -->
-                        <script src="visualization.js"></script>
+                        <script src="visualization_temp.js"></script>
                       </div>
                     </div>
                   </div>
