--- a/public/visualization.html
+++ b/public/visualization.html
@@ -52,7 +52,7 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>
 
     <!-- Eigenes JavaScript -->
-    <script src="visualization.js"></script>
+    <script src="visualization_temp_short.js"></script>
 </body>
 
 </html>
