--- a/Sensorprojekt/Temperatur.html
+++ b/Sensorprojekt/Temperatur.html
@@ -71,17 +71,17 @@
                     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
                     <title></title>
                     <div class="container">
-                      <h1 class="mt-3">Temperatur &amp; Humidity Sensor (BME680)</h1>
-                      <h2 class="mt-5">Temperatur Level (Aktueller Wert)</h2><!-- Aktueller Lux Level als Progressbar -->
-                      <div class="progress">
+                      <!-- <h1 class="mt-3">Temperatur &amp; Humidity Sensor (BME680)</h1> -->
+                      <!-- <h2 class="mt-5">Temperatur Level (Aktueller Wert)</h2>Aktueller Lux Level als Progressbar -->
+                      <!-- <div class="progress">
                         <div id="templevel-bar" class="bg-success progress-bar" role="progressbar" style="width: 0%"></div>
-                      </div><!-- Aktueller Lux Level als Text -->
+                      </div>Aktueller Lux Level als Text -->
                       <p id="templevel-text">Warte auf erste Messung...</p>
-                      <h2 class="mt-5">Lux Level (Durchschnitt)</h2><!-- Durchschnittlicher Lux Level als Progressbar -->
-                      <div class="progress">
+                      <!-- <h2 class="mt-5">Lux Level (Durchschnitt)</h2>Durchschnittlicher Lux Level als Progressbar -->
+                      <!-- <div class="progress">
                         <div id="luxlevel-average-bar" class="bg-success progress-bar" role="progressbar" style="width: 0%"></div>
-                      </div><!-- Durchschnittlicher Lux Level als Text -->
-                      <p id="luxlevel-average-text">Warte auf erste Messung...</p>
+                      </div>Durchschnittlicher Lux Level als Text -->
+                      <!-- <p id="luxlevel-average-text">Warte auf erste Messung...</p> -->
                       <h2 class="mt-5">Lux Level (Verlauf)</h2><!-- Verlauf Lux Level als Chart -->
                       <div id="luxlevel-chart" style="max-width:100%; height:400px"></div>
                     </div><!-- Bootstrap JavaScript -->
