--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <p><a href="/SePro.html">SEPR-TEHU (event, variables, functions)</a></p>
     <p><a href="/events.html">Events</a></p>
     <p><a href="/visualization.html">Visualization</a></p>
+    <p><a href="/visualization_temp.html">Visualization Temperatur</a></p>
+    <p><a href="/visualization_hum.html">Visualization Huminity</a></p>
 </body>
 
 </html>
