--- a/public/visualization_hum.html
+++ b/public/visualization_hum.html
@@ -1,15 +1,24 @@
 <!doctype html>
 <html>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
 <body>
     <div class="container">
         <h2 class="mt-5">Feuchtigkeit Aktueller Wert</h2>
 
-        <!-- Aktueller Feuchtigkeit Level als Text -->
+        <!-- Aktueller Temp Level als Text -->
         <p id="humlevel-text">Warte auf erste Messung...</p>
         
         <h2 class="mt-5">Feuchtigkeit - Verlauf</h2>
 
-        <!-- Verlauf Feuchtigkeit Level als Chart -->
+        <!-- Verlauf Temp Level als Chart -->
         <div id="humlevel-chart" style="max-width:100%; height:400px"></div>
     </div>
 
@@ -24,5 +33,4 @@
     <!-- Eigenes JavaScript -->
     <script src="visualization_hum.js"></script>
 </body>
-
 </html>
