--- a/Sensorprojekt/Startseite.html
+++ b/Sensorprojekt/Startseite.html
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-4e72"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1300" data-image-height="650">
+        <a href="Startseite.html" data-page-id="56117713" class="u-image u-logo u-image-1" data-image-width="1300" data-image-height="650" title="Logo">
           <img src="images/feuchtigkeit-im-auto-3.jpg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -58,13 +58,42 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-section-1" id="carousel_b363">
-      <div class="u-align-left u-clearfix u-sheet u-sheet-1"></div>
+    <section class="u-align-center u-clearfix u-grey-5 u-section-1" id="carousel_04ad">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-expanded-width u-tab-links-align-center u-tabs u-tabs-1">
+          <ul class="u-spacing-15 u-tab-list u-unstyled" role="tablist">
+            <li class="u-tab-item" role="presentation">
+              <a class="active u-active-palette-3-base u-button-style u-tab-link u-text-active-black u-text-body-color u-text-hover-grey-75 u-tab-link-1" id="link-tab-0da5" href="#tab-0da5" role="tab" aria-controls="tab-0da5" aria-selected="true">Projektbeschreibung</a>
+            </li>
+            <li class="u-tab-item" role="presentation">
+              <a class="u-active-palette-3-base u-button-style u-tab-link u-text-active-black u-text-body-color u-text-hover-grey-75 u-tab-link-2" id="link-tab-14b7" href="#tab-14b7" role="tab" aria-controls="tab-14b7" aria-selected="false">Architektur</a>
+            </li>
+          </ul>
+          <div class="u-tab-content">
+            <div class="u-align-center u-container-style u-tab-active u-tab-pane u-white u-tab-pane-1" id="tab-0da5" role="tabpanel" aria-labelledby="link-tab-0da5">
+              <div class="u-container-layout u-valign-middle u-container-layout-1">
+                <div alt="" class="u-image u-image-circle u-image-1" data-image-width="1600" data-image-height="1200"></div>
+                <p class="u-text u-text-1"> Selbstständiges Projekt im Modul IoT im HS21<br>Das Ziel des IoT Projekt ist die selbstständige erarbeitung eines funktionsfähigen IoT Devices
+                </p>
+                <p class="u-text u-text-2"> Das Projekt handelt von der erarbeitung eines Feuchtigkeit und Temperatur Sensors. Die Daten sollen auf der Seite verfolgt werden können sowie über</p>
+              </div>
+            </div>
+            <div class="u-container-style u-tab-pane u-white u-tab-pane-2" id="tab-14b7" role="tabpanel" aria-labelledby="link-tab-14b7">
+              <div class="u-container-layout u-container-layout-2">
+                <img class="u-image u-image-round u-radius-10 u-image-2" src="images/Architektur.png" alt="" data-image-width="2298" data-image-height="1424">
+                <p class="u-align-center u-text u-text-3">Die Daten werden auf einem Argon Particle mithilfe eines BME680 Sensors erfasst und an die Particle Clound geschickt.&nbsp;<br>Von dort aus gehen die Daten in eine Heroku Umgebung wo das Frontent visualisiert wird. Ergänzend dazu werden die Daten in der Particle Cloud via IFTTT überwacht und je nach Statusänderung werden entsprechend Hue "Go" Lampen getriggert mittels Task.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-823f"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Beispiel normaler Text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Created by Chrisma8 - HS2021<br>IoT Sensor Projekt im Modul IoT
+        </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/templates" target="_blank">
