--- a/Sensorprojekt/Temperatur.html
+++ b/Sensorprojekt/Temperatur.html
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-4e72"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1300" data-image-height="650">
+        <a href="Startseite.html" data-page-id="56117713" class="u-image u-logo u-image-1" data-image-width="1300" data-image-height="650" title="Logo">
           <img src="images/feuchtigkeit-im-auto-3.jpg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -69,25 +69,15 @@
                     <meta charset="utf-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Bootstrap CSS -->
                     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-                    <title></title>
                     <div class="container">
-                      <!-- <h1 class="mt-3">Temperatur &amp; Humidity Sensor (BME680)</h1> -->
-                      <!-- <h2 class="mt-5">Temperatur Level (Aktueller Wert)</h2>Aktueller Lux Level als Progressbar -->
-                      <!-- <div class="progress">
-                        <div id="templevel-bar" class="bg-success progress-bar" role="progressbar" style="width: 0%"></div>
-                      </div>Aktueller Lux Level als Text -->
+                      <h2 class="mt-5">Temperatur Aktueller Wert</h2><!-- Aktueller Temp Level als Text -->
                       <p id="templevel-text">Warte auf erste Messung...</p>
-                      <!-- <h2 class="mt-5">Lux Level (Durchschnitt)</h2>Durchschnittlicher Lux Level als Progressbar -->
-                      <!-- <div class="progress">
-                        <div id="luxlevel-average-bar" class="bg-success progress-bar" role="progressbar" style="width: 0%"></div>
-                      </div>Durchschnittlicher Lux Level als Text -->
-                      <!-- <p id="luxlevel-average-text">Warte auf erste Messung...</p> -->
-                      <h2 class="mt-5">Lux Level (Verlauf)</h2><!-- Verlauf Lux Level als Chart -->
-                      <div id="luxlevel-chart" style="max-width:100%; height:400px"></div>
+                      <h2 class="mt-5">Temperatur - Verlauf</h2><!-- Verlauf Temp Level als Chart -->
+                      <div id="templevel-chart" style="max-width:100%; height:400px"></div>
                     </div><!-- Bootstrap JavaScript -->
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script><!-- Google Charts JavaScript -->
                     <script src="https://www.gstatic.com/charts/loader.js"></script><!-- Eigenes JavaScript -->
-                    <script src="visualization temp.js"></script>
+                    <script src="visualization_temp.js"></script>
                   </div>
                 </div>
               </div>
@@ -99,7 +89,8 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-823f"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Beispiel normaler Text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Created by Chrisma8 - HS2021<br>IoT Sensor Projekt im Modul IoT
+        </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
