--- a/Sensorprojekt/Temperatur.html
+++ b/Sensorprojekt/Temperatur.html
@@ -58,27 +58,37 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-section-1" id="sec-b9a3">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
-          <div class="u-gutter-0 u-layout">
+    <section class="u-clearfix u-section-1" id="sec-e28b">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1">
-                  <div class="u-clearfix u-custom-html u-custom-html-1"><!-- Required meta tags -->
+              <div class="u-container-style u-layout-cell u-size-41 u-layout-cell-1">
+                <div class="u-container-layout u-valign-top u-container-layout-1">
+                  <div class="u-clearfix u-custom-html u-preserve-proportions u-custom-html-1"><!-- Required meta tags -->
                     <meta charset="utf-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Bootstrap CSS -->
                     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
                     <div class="container">
-                      <h2 class="mt-5">Temperatur Aktueller Wert</h2><!-- Aktueller Temp Level als Text -->
+                      <h5 class="mt-5">Temperatur Aktueller Wert</h5><!-- Aktueller Temp Level als Text -->
                       <p id="templevel-text">Warte auf erste Messung...</p>
-                      <h2 class="mt-5">Temperatur - Verlauf</h2><!-- Verlauf Temp Level als Chart -->
+                      <h5 class="mt-5">Temperatur - Verlauf</h5><!-- Verlauf Temp Level als Chart -->
                       <div id="templevel-chart" style="max-width:100%; height:400px"></div>
                     </div><!-- Bootstrap JavaScript -->
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script><!-- Google Charts JavaScript -->
                     <script src="https://www.gstatic.com/charts/loader.js"></script><!-- Eigenes JavaScript -->
                     <script src="visualization_temp.js"></script>
                   </div>
+                </div>
+              </div>
+              <div class="u-align-left u-container-style u-layout-cell u-size-19 u-layout-cell-2">
+                <div class="u-container-layout u-valign-top u-container-layout-2">
+                  <p class="u-text u-text-1">
+                    <span style="font-weight: 700;">Optimale Feuchtigkeit: 50&nbsp;– 60%</span>
+                    <br>
+                    <br>Wert &lt;50% - Luftbefeuchter aktivieren<br>Wert &gt;60% - Lüften
+                  </p>
+                  <img class="u-expanded-width u-image u-image-round u-radius-22 u-image-1" src="images/image-20150918-12351-3bfjdk.jpg" alt="" data-image-width="1200" data-image-height="1200">
                 </div>
               </div>
             </div>
