--- a/Sensorprojekt/Temperatur.html
+++ b/Sensorprojekt/Temperatur.html
@@ -84,9 +84,9 @@
               <div class="u-align-left u-container-style u-layout-cell u-size-19 u-layout-cell-2">
                 <div class="u-container-layout u-valign-top u-container-layout-2">
                   <p class="u-text u-text-1">
-                    <span style="font-weight: 700;">Optimale Feuchtigkeit: 50&nbsp;– 60%</span>
+                    <span style="font-weight: 700;">Optimale Temperatur: 21 – 23°C</span>
                     <br>
-                    <br>Wert &lt;50% - Luftbefeuchter aktivieren<br>Wert &gt;60% - Lüften
+                    <br>Wert &lt;21°C - Heizung erhöhen<br>Wert &gt;23°C - Lüften
                   </p>
                   <img class="u-expanded-width u-image u-image-round u-radius-22 u-image-1" src="images/image-20150918-12351-3bfjdk.jpg" alt="" data-image-width="1200" data-image-height="1200">
                 </div>
